Fixes dark mode

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
   .svg_icon, 
       .Home_link__mt0ji,
       .icons,
-      .Home_link_card__FkpPR,
       .mr-2,      
       iframe /* for recaptcha */ {
     filter: invert(100%) !important;
